; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/user/winsrv/consrv/frontends/gui/extr_conwnd.c_Paste.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/user/winsrv/consrv/frontends/gui/extr_conwnd.c_Paste.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32 }

@TEXTMODE_BUFFER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*)* @Paste to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Paste(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = call i64 @OpenClipboard(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %30

10:                                               ; preds = %1
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %4, align 8
  %14 = load i64, i64* %4, align 8
  %15 = call i64 @GetType(i64 %14)
  %16 = load i64, i64* @TEXTMODE_BUFFER, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %23

18:                                               ; preds = %10
  %19 = load i64, i64* %4, align 8
  %20 = trunc i64 %19 to i32
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %22 = call i32 @GuiPasteToTextModeBuffer(i32 %20, %struct.TYPE_5__* %21)
  br label %28

23:                                               ; preds = %10
  %24 = load i64, i64* %4, align 8
  %25 = trunc i64 %24 to i32
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %27 = call i32 @GuiPasteToGraphicsBuffer(i32 %25, %struct.TYPE_5__* %26)
  br label %28

28:                                               ; preds = %23, %18
  %29 = call i32 (...) @CloseClipboard()
  br label %30

30:                                               ; preds = %28, %1
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i64 @OpenClipboard(i32) #1

declare dso_local i64 @GetType(i64) #1

declare dso_local i32 @GuiPasteToTextModeBuffer(i32, %struct.TYPE_5__*) #1

declare dso_local i32 @GuiPasteToGraphicsBuffer(i32, %struct.TYPE_5__*) #1

declare dso_local i32 @CloseClipboard(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
